=== master

* Command help is now cached if the command is frozen (jeremyevans)

* Remove Command#option_{parsers,text}, as Command#help makes the methods unnecessary (jeremyevans)

* The SkipOptionParser class has been removed as it is no longer needed (jeremyevans)

* CommandFailure now accepts a command argument instead of an array of option parsers (jeremyevans)

* Command#process_command_failure private method no longer takes an option parser argument (jeremyevans)

* OptionParser#subcommands accessor has been removed as it is no longer needed (jeremyevans)

* Make options/post_options methods require a block (jeremyevans)

* Add Command#help for getting command help output, switch to using it internally (jeremyevans)

* Add banner/post_banner for setting banners for commands without creating option parser (jeremyevans)

* Add desc for setting descriptions for commands (jeremyevans)

=== 1.1.0 (2025-03-03)

* Support after_options method for a block called after options processing (jeremyevans)

=== 1.0.0 (2025-02-27)

* Initial Public Release